automation-service/kafka-cluster/k8s/zookeeper-service-entry/zookeeper-1-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: zookeeper1
spec:
  hosts:
  - zookeeper-1
  ports:
  - number: 32181
    name: tcp
    protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: zookeeper1-internal-1
spec:
  hosts:
  - zookeeper-1
  ports:
  - number: 2888
    name: tcp
    protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: zookeeper1-internal-2
spec:
  hosts:
  - zookeeper-1
  ports:
  - number: 3888
    name: tcp
    protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
