automation-service/kafka-cluster/k8s/zookeeper-service-entry/zookeeper-3-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: zookeeper3
spec:
  hosts:
  - zookeeper-3
  ports:
  - number: 32181
    name: tcp
    protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: zookeeper3-internal-1
spec:
  hosts:
  - zookeeper-3
  ports:
  - number: 2888
    name: tcp
    protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: zookeeper3-internal-2
spec:
  hosts:
  - zookeeper-3
  ports:
  - number: 3888
    name: tcp
    protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
